- Add expense view - Main page with MPAndroidChart - Built basic navigation functionality
* Dummy data used so far

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">WealthWise</string>
 
+
+    <!-- Expense Categories -->
+    <string-array name="expense_categories">
+        <item>Entertainment</item>
+        <item>Transportation</item>
+        <item>Household Expenses</item>
+        <item>Food</item>
+        <item>Utilities</item>
+        <item>Health</item>
+        <item>Other</item>
+    </string-array>
+
 </resources>
