- Added back button to Navigation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">WealthWise</string>
 
+    <!-- App Core Values -->
+    <string name="enter_expense">Enter Expense</string>
+    <string name="category">Category</string>
+    <string name="save_expense">Save Expense</string>
+
 
     <!-- Expense Categories -->
     <string-array name="expense_categories">
